optimizacion carga de imags

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
       <h1>TIENDA</h1>
       <div class="store-container">
         <div class="store-item">
-          <img id="cafe1" src="images/coffee-1.svg" alt="cafe.1">
+          <img id="cafe1" src="images/coffee-1.png" alt="cafe.1">
         </div>
         <div class="store-item" id="cafe2">
-          <img src="images/coffee-2.svg" alt="cafe.1">
+          <img src="images/coffee-2.png" alt="cafe.1">
         </div>
         <div class="store-item" id="cafe3">
-          <img src="images/coffee-3.svg" alt="cafe.1">
+          <img src="images/coffee-3.png" alt="cafe.1">
         </div>
 
       </div>
