opt de carga de imgs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Allura&family=League+Spartan:wght@300;400&family=Montserrat:wght@400;500&display=swap"
     rel="stylesheet">
-  <link rel="preconnect" href="css/styles.css">
+  <link rel="preload" href="css/styles.css" as="style">
   <!--CSS and Normalize-->
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -78,13 +78,13 @@
       <h1>TIENDA</h1>
       <div class="store-container">
         <div class="store-item">
-          <img id="cafe1" src="images/coffee-1.png" alt="cafe.1">
+          <img id="cafe1" src="images/coffee-1.webp" alt="cafe.1">
         </div>
         <div class="store-item" id="cafe2">
-          <img src="images/coffee-2.png" alt="cafe.1">
+          <img src="images/coffee-2.webp" alt="cafe.1">
         </div>
         <div class="store-item" id="cafe3">
-          <img src="images/coffee-3.png" alt="cafe.1">
+          <img src="images/coffee-3.webp" alt="cafe.1">
         </div>
 
       </div>
