--- a/index.html
+++ b/index.html
@@ -65,23 +65,51 @@
       <a name="menu"></a>
       <div class="menu-container">
         <h1>MENU</h1>
-        <div class="item1"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
+        <div class="item1">
+          <div class="texto-menu">
+            <h2>COFFEES</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie in magna in euismod. Praesent
+              tincidunt in sapien vel cursus. Maecenas tincidunt dignissim tempus. Sed mollis libero imperdiet leo
+              euismod, nec ornare augue lacinia. Curabitur est tortor, iaculis ac nibh aliquam, fringilla venenatis
+              nisi.
+            </p>
+          </div>
+          <img src="images/menu-cafe.webp" alt="menu de cafes">
+        </div>
+        <div class="item2">
+          <div class="texto-menu">
+            <h2>LUNCH</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie in magna in euismod. Praesent
+              tincidunt in sapien vel cursus. Maecenas tincidunt dignissim tempus. Sed mollis libero imperdiet leo
+              euismod, nec ornare augue lacinia. Curabitur est tortor, iaculis ac nibh aliquam, fringilla venenatis
+              nisi.
+            </p>
+          </div>
+          <img src="images/menu-lunch.webp" alt="menu de cafes">
+        </div>
+        <div class="item3">
+          <div class="texto-menu">
+            <h2>DESSERTS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie in magna in euismod. Praesent
+              tincidunt in sapien vel cursus. Maecenas tincidunt dignissim tempus. Sed mollis libero imperdiet leo
+              euismod, nec ornare augue lacinia. Curabitur est tortor, iaculis ac nibh aliquam, fringilla venenatis
+              nisi.
+            </p>
+          </div>
+          <img src="images/menu-dessert.webp" alt="menu de cafes">
+        </div>
         <button class="boton" href="">MIRA EL MENU COMPLETO</button>
       </div>
     </section>
     <!------------------------>
     <!-------- STORE --------->
     <!------------------------>
-
     <section class="grid-item store">
       <a name="store"></a>
       <h1>TIENDA</h1>
       <div class="store-container">
         <i class="fa-solid fa-angle-left"></i>
         <div id="cafe1" class="store-item">
-
           <img src="images/coffee-1.webp" alt="cafe.1">
           <p>KENYA 4/4</p>
         </div>
@@ -143,10 +171,10 @@
     <!------------------------>
     <footer class="grid-item footer">
       <div class="icon-container">
-        <a><i class="icons fa-brands fa-whatsapp"></i></a>
-        <a><i class="icons fa-brands fa-instagram"></i></a>
-        <a><i class="icons fa-brands fa-facebook-f"></i></a>
-        <a><i class="icons fa-brands fa-twitter"></i></a>
+        <a href=""><i class="icons fa-brands fa-whatsapp"></i></a>
+        <a href=""><i class="icons fa-brands fa-instagram"></i></a>
+        <a href=""><i class="icons fa-brands fa-facebook-f"></i></a>
+        <a href=""> <i class="icons fa-brands fa-twitter"></i></a>
       </div>
       <span id="copy">© 2022 Todos los derechos reservados. THE COFFEE CLUB.</span>
     </footer>
